@startuml
skinparam classAttributeIconSize 0
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto
skinparam classAttributeIconSize 0

class AgendaEntry {
    date
    associatedTeam
    associatedVehicles
}

class AgendaEntryDTO {

    date
    greenSpace
    description
    expectedDuration
    urgencyDegree
    entryStatus
    associatedTeam
    associatedVehicles

}

class SystemUser {
    name
    email
    password
    phone
}


class AgendaEntryRepository {
    - ArrayList<AgendaEntry> agendaEntries

    + getAgendaEntryListWithoutCancelled(authenticationController.getCurrentUserEmail())
    +getAgendaEntryByDescriptionAndGreenspace(dto.description, dto.greenSpace)
    +update(entry, EntryStatus.CANCELLED)
}

class Repositories {
    - agendaEntryRepository

    - Repositories()
    + getInstance()
    + getAgendaEntryRepository()

}

class AgendaEntryMapper {
    + toDtoList(List<AgendaEntry> toDoEntryList)

}


class CancelAgendaEntryController {
    - AgendaEntryRepository agendaEntryRepository
    - AgendaEntryMapper agendaEntryMapper

    + getAgendaEntryWithoutCancelledDTOList()
    +cancelAgendaEntry(AgendaEntryDTO dto)
}

class CancelAgendaEntryUI {

}

CancelAgendaEntryUI .> CancelAgendaEntryController
CancelAgendaEntryController ..> Repositories : repositories
Repositories --> "1" AgendaEntryRepository
Repositories -> Repositories : instance
CancelAgendaEntryController .> AgendaEntryMapper
CancelAgendaEntryController --> AgendaEntryRepository : uses

SystemUser <|- GSM
ToDoEntry <|-- AgendaEntry

GSM "1" -- "1" CancelAgendaEntryUI
AgendaEntry "*" <-- "1" AgendaEntryRepository : stores
AgendaEntryDTO "*" <-- "1" AgendaEntryMapper : creates


@enduml
